Navbar tabs:focus color-darken

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -26,7 +26,7 @@ ul > li {
 .tabs {
     color: white;
     font-size: 18px;
-    background-image: linear-gradient(white, white );
+    background-image: linear-gradient(rgb(235, 235, 235), rgb(235, 235, 235) );
     background-size: 0% .1em;
     background-position-y: 90%;
     background-position-x: 95%;
@@ -35,7 +35,7 @@ ul > li {
 }
 
 .tabs:hover, .tabs:focus, .tabs:active {
-    color: white;
+    color: rgb(235, 235, 235);
     cursor: pointer;
     background-size: 100% .1em;
     background-position-x: 0%;
