NavLink Implementation - Projects

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -32,6 +32,7 @@ ul > li {
     background-position-x: 95%;
     background-repeat: no-repeat;
     transition: background-size .4s ease-in-out;
+    margin-left: 25px;
 }
 
 .tabs:hover, .tabs:focus, .tabs:active {
