--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -3,4 +3,21 @@
     width: 400px;
     height: 250px;
     object-fit: fill;
+    border-radius: 10%;
+}
+
+.projectContainer {
+    width: 450px;
+    height: 400px;
+    border-radius: 8%;
+}
+
+.projectContainer:hover {
+    .description {
+        display: block;
+    }
+}
+
+.description {
+    display: none;
 }
