--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,3 @@
-
 .imgContainer {
     width: 100%;
     height: 100vh;
@@ -16,7 +15,7 @@
     z-index: 9999;
     width: 100%;
     height: 100vh;
-    background-color: rgba(36, 82, 162, 0.548)
+    background: linear-gradient(rgba(36, 82, 162, 0.548) 75%, rgb(63, 62, 62))
 }
 
 .myTextContainer {
@@ -32,5 +31,7 @@
 
 .myIntro {
     font-size: 32px;
-    color: whitesmoke
+    color: whitesmoke;
+    line-height: 32px;
+    margin-top: 5px;
 }
