--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,17 +1,48 @@
 
 .container {
     width: 100%;
-    height: 110vh;
-    background: linear-gradient(#426ac7da, rgb(255, 255, 255));
+    height: 100vh;
+    background-color: rgb(255, 255, 255);
 }
 
 .textContainer {
-    width: 800px;
-    height: 400px;
+    width: 50%;
+    height: 40%;
     margin-top: 60px;
+    margin: auto;
     background-color: rgba(245, 245, 245, 0.413);
 }
 
 .tab {
     margin-left: 20px
+}
+
+a {
+    text-decoration: inherit;
+    color: inherit
+}
+
+a:hover {
+    color: inherit
+}
+
+.gitHub {
+    width: 30px;
+    height: 30px;
+    margin: auto;
+    display: inline;
+    border: 1px solid black;
+}
+
+.input {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    border-bottom: 1px solid black;
+    padding-top: 0;
+    padding-left: 0;
+    line-height: 1em;
+}
+
+.input:focus {
+    outline:none
 }
