--- a/src/components/Projects/ProjectCards.module.scss
+++ b/src/components/Projects/ProjectCards.module.scss
@@ -10,7 +10,7 @@
     width: 360px;
     height: 250px;
     object-fit: fill;
-    border-radius: 5%;
+    border-radius: 2%;
 }
 
 .description {
@@ -18,7 +18,7 @@
     margin-top: 20px;
     text-align: center;
     font-size: 18px;
-    color: black;
+    color: white;
     display: none;
 }
 
