--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,7 +1,8 @@
 .container {
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(#426ac7da, rgb(255, 255, 255));
+    max-height: 100%;
+    background: linear-gradient(rgba(35, 34, 34, 0.884) 100%, rgb(255, 255, 255));
+    padding-bottom: 200px;
 }
 
 .img {
@@ -35,4 +36,8 @@
         transform: scale(1.07);
     }
 
+}
+
+.displayCard {
+    display: block;
 }
