Intro Revision. Navbar Responsive.

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,7 +15,8 @@
     z-index: 9999;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(36, 82, 162, 0.548) 75%, rgb(63, 62, 62))
+    background: linear-gradient(rgba(36, 82, 162, 0.548) 75%, rgb(63, 62, 62));
+    overflow: hidden;
 }
 
 .myTextContainer {
@@ -32,6 +33,6 @@
 .myIntro {
     font-size: 32px;
     color: whitesmoke;
-    line-height: 32px;
+    line-height: 40px;
     margin-top: 5px;
 }
