About: LinkedIn Logo Added

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -30,7 +30,14 @@ a:hover {
     width: 40px;
     height: 40px;
     margin: auto;
-    display: inline;
+    margin-right: 15px;
+}
+
+.linkedIn {
+    width: 45px;
+    height: 35px;
+    margin: auto;
+    margin-left: 15px;
 }
 
 .input {
