My Stack Responsive

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -51,11 +51,12 @@ ul > li {
     display: none;
     margin-top: 0;
     margin-right: 0;
-    width: 240px
+    width: 240px;
 }
 
 .stack {
-    width: 240px
+    width: 240px;
+    margin-right: none
 }
 
 .stack:hover {
