My Stack Responsive

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -51,12 +51,11 @@ ul > li {
     display: none;
     margin-top: 0;
     margin-right: 0;
-    width: 240px;
+    width: 40%;
 }
 
 .stack {
-    width: 240px;
-    margin-right: none
+    width: 40%;
 }
 
 .stack:hover {
