--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -30,6 +30,13 @@
     color: white
 }
 
+.myTitle {
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    margin-bottom: 0;
+}
 .myIntro {
     font-size: 32px;
     color: whitesmoke;
