--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -51,11 +51,11 @@ ul > li {
     display: none;
     margin-top: 0;
     margin-right: 0;
-    width: 40%;
+    width: 240px;
 }
 
 .stack {
-    width: 40%;
+    width: 240px;
 }
 
 .stack:hover {
@@ -63,4 +63,14 @@ ul > li {
         display: block;
     }
 
+}
+
+@media screen and (max-width: 700px) {
+    .stack {
+        width: 50%
+    }
+
+    .hiddenDrop {
+        width: 50%;
+    }
 }
