--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -52,3 +52,9 @@ a:hover {
 .input:focus {
     outline:none
 }
+
+@media screen and (max-width: 700px) {
+    .hideEmail {
+        display: none;
+    }
+}
