--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -41,3 +41,16 @@
 .displayCard {
     display: block;
 }
+
+.filterButtonContainer {
+    margin: auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+@media only screen and (max-width: 500px) {
+    .filterButtonContainer {
+        display: none;
+    }
+    
+}
